Moves data-bus pattern to Java 11