@@ -27,7 +27,6 @@ import com.iluwatar.databus.DataType;
 import com.iluwatar.databus.Member;
 import com.iluwatar.databus.data.MessageData;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.logging.Logger;
 
@@ -61,6 +60,6 @@ public class MessageCollectorMember implements Member {
   }
 
   public List<String> getMessages() {
-    return Collections.unmodifiableList(messages);
+    return List.copyOf(messages);
   }
 }
